# cosmoRS

./: CMakeLists.txt  Makefile  README.md  README.pdf.sh  README.sh  bkp_makefile  bkp_singleprop.h  boundmass.txt  center.txt  check_syscalls.c  config.template.h  config_part_mass_ZXY.c  config_part_mass_ZXY.h  config_vars.h  eg_outbind.txt  eg_outunbind.txt  extract.py  halo.h  main.c  modRS  myutils.c  myutils.h  outbind.txt  outdebug.txt  plot.py  plot100m.py  plotde.py  plotrho.py  potential.c  potential.h  properties.c  readfiles.txt  rockstar.c  singleprop.c  starprop.c  submit.sh  universal_constants.h
ZXY_module/: calc_pot_MW.c  calc_pot_MW.h  gravtree.c
commands/: .sh  SIDM50-iso-m3e8-c28.4-low.sh  analysis_energy.ipynb  count_CDM760.c  count_SIDM.c  count_SIDM100.c  count_presim.c  getDMpos_CDM.c  getDMpos_SIDM.c  getDMprof_CDM.c  getDMprof_SIDM.c  getbdmass_CDM_SIDM.c  modRS  mvfile.c  nohup.out  sh-all.sh  write_cmd_all.py
dataProfile/: prof_bound_halo_snapshot_snap275.txt
io/: b_to_a  getMprof.c  getMprof.h  getVprof.c  getVprof.h  getcenter.c  getcenter.h  getprof.c  getprof.h  getrho.c  getrho.h  getsigma.c  getsigma.h  getsigmaprof.c  getsigmaprof.h  getsigmaprofZXY.c  getv0.c  getv0.h  getvr.c  io_gadget.c  io_gadget.h  io_gadgetStar.c  io_gadgetStar.h  io_gadgeth2.c  io_gadgeth2.h  mgrav
io/lostfound/: getrho.c  new_getrho.c
scripts/: runsingle.c
